Adição de rota autenticada no swagger
