# src/shared/infra/http/routes/index.ts
@@ -14,6 +14,6 @@ router.use("/specifications", specificationsRoutes);
 router.use("/users", usersRoutes);
 router.use("/cars", carsRoutes);
 router.use("/rentals", rentalsRoutes);
-router.use(authenticateRoutes);
+router.use("/sessions", authenticateRoutes);
 
 export { router };
